Se añadio estructura html y estilo

--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sabor Peruano</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet" />
 </head>
 <body>
-    
-    
+    <nav class="nav_content">
+        <div class="alineacion">
+            <img class="size_logo" src="./img/logo.png" alt="logo de pagina">
+        </div>
+        <div class="alineacion">
+            <div class="labelpad">
+                <img class="containersvg" src="./img/telefono.png" alt="icono de telefono" />
+                <label class="labelpad">786402</label>
+            </div>
+            <div class="labelpad">
+                <img class="containersvg" src="./img/person.svg" alt="icono de persona">
+                <label class="labelpad">Ingresa o Crea una Cuenta</label>
+            </div>
+        </div>
+    </nav>
+    <div class="content">
+        <div class="full_screen">
+            <div class="label_container">
+                <label class="font_label">Nuestra Carta</label>
+                <label class="font_label">Reserva Aqui</label>
+                <label class="font_label">Delivery</label>
+            </div>
+            <img src="./img/portada.jpg" alt="Plato de portada" />
+        </div>
+    </div>
 </body>
 </html>
