--- a/index.html
+++ b/index.html
@@ -4,36 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabor Peruano</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/index_style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet" />
 </head>
-<body>
-    <nav class="nav_content">
-        <div class="alineacion">
-            <img class="size_logo" src="./img/logo.png" alt="logo de pagina">
-        </div>
-        <div class="alineacion">
-            <div class="labelpad">
-                <img class="containersvg" src="./img/telefono.png" alt="icono de telefono" />
-                <label class="labelpad">786402</label>
+    <div class="container">
+        <nav class="nav_content">
+            <div class="alineacion">
+                <a href="./src/aboutme.html">
+                    <img class="size_logo" src="./img/logo.png" alt="logo de pagina">
+                </a>
             </div>
-            <div class="labelpad">
-                <img class="containersvg" src="./img/person.svg" alt="icono de persona">
-                <label class="labelpad">Ingresa o Crea una Cuenta</label>
+            <div class="alineacion">
+                <div class="labelpad">
+                    <img class="containersvg" src="./img/telefono.png" alt="icono de telefono" />
+                    <label class="labelpad">786402</label>
+                </div>
+                <div class="labelpad">
+                    <img class="containersvg" src="./img/person.svg" alt="icono de persona">
+                    <label class="labelpad">Ingresa o Crea una Cuenta</label>
+                </div>
+            </div>
+        </nav>
+        <div class="content">
+            <div class="full_screen">
+                <div class="label_container">
+                    <input href="./src/carta.html" class="styled-button "type="button" value="  Nuestra Carta   ">
+                    <input href="./src/reserva.html" class="styled-button"type="button" value="   Reserva Aqui    ">
+                    <input href="./src/delivery.html" class="styled-button"type="button" value="    Delivery    ">
+                </div>
+                <img src="./img/portada.jpg" alt="Plato de portada" />
             </div>
         </div>
-    </nav>
-    <div class="content">
-        <div class="full_screen">
-            <div class="label_container">
-                <label class="font_label">Nuestra Carta</label>
-                <label class="font_label">Reserva Aqui</label>
-                <label class="font_label">Delivery</label>
-            </div>
-            <img src="./img/portada.jpg" alt="Plato de portada" />
-        </div>
-    </div>
 </body>
 </html>
