se añadio desactivando de scroll

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <nav class="nav_content">
             <div class="alineacion">
-                <a href="./src/aboutme.html">
+                <a href="./src/aboutus.html">
                     <img class="size_logo" src="./img/logo.png" alt="logo de pagina">
                 </a>
             </div>
