se añadio estilo a aboutus html

--- a/src/reserva.html
+++ b/src/reserva.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/reserva_style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet" />
     <title>Reserva Aqui</title>
 </head>
 <body>
-    
+    <div class="flag">
+        <div class="izquierda"></div>
+        <div class="derecha"></div>
+    </div>
+    <div class="abajo">
+        <div id="row">
+            <h1 class="font_text titulo">Catering y Eventos</h1>
+        </div>
+        <div class="text_container">
+            <p class="font_text parrafo">Queremos ser parte de tu evento especial.</p>
+            <input type="button" class="btn" value="   HAS TU PEDIDO   ">
+        </div>
+    </div>        
 </body>
 </html>
