--- a/src/delivery.html
+++ b/src/delivery.html
@@ -6,7 +6,18 @@
     <title>Delivery</title>
 </head>
 <body>
-    
-    
+    <table class="flag">
+        <td class="izquierda">
+            <img src="../img/Tallarines_Rojos.png" alt="">
+        </td>
+
+        <td class="centro">
+            <p>"Sabor Peruano" es un restaurante que ofrece una fusión única entre la cocina peruana y las pastas italianas. Con platos como tallarines con ají de gallina y ravioles de lomo saltado, combina sabores auténticos con creatividad culinaria. Es el lugar perfecto para una experiencia gastronómica sorprendente y deliciosa.</p>
+        </td>
+
+        <td class="derecha">
+            <img src="../img/plato3.jpg" alt="">
+        </td>
+    <table/>
 </body>
 </html>
