Se añadio vista delivery

--- a/src/delivery.html
+++ b/src/delivery.html
@@ -4,20 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivery</title>
+    <link rel="stylesheet" href="../css/delivery_style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <table class="flag">
-        <td class="izquierda">
-            <img src="../img/Tallarines_Rojos.png" alt="">
-        </td>
-
-        <td class="centro">
-            <p>"Sabor Peruano" es un restaurante que ofrece una fusión única entre la cocina peruana y las pastas italianas. Con platos como tallarines con ají de gallina y ravioles de lomo saltado, combina sabores auténticos con creatividad culinaria. Es el lugar perfecto para una experiencia gastronómica sorprendente y deliciosa.</p>
-        </td>
-
-        <td class="derecha">
-            <img src="../img/plato3.jpg" alt="">
-        </td>
-    <table/>
+    <div class="container">
+        <div class="izquierda">
+            <img src="../img/plato_de_pasta.png" alt="">
+        </div>
+        <div class="derecha">
+            <h1>Horario de Atención</h1>
+            <p>Lunes a jueves</p>
+            <p>12:00 - 23:00 h</p>
+            <p>Viernes - Sabado</p>
+            <p>12:00 - 00:00 h</p>
+            <p>Domingo</p>
+            <p>12:30 - 22:30 h</p>
+        </div>
+    </div>
+    <div class="abajo">
+        <h1 class="color_text">Ubicanos</h1>
+        <h2 class="color_text">Av. Ejercito 284</h2>
+        <h2 class="color_text">Yanahura, Arequipa, Peru</h2>
+        <p class="color_text">Formas de Pago</p>
+        <div class="formas-redes">
+            <div class="formas-pago">
+                <img src="../img/mastercard.png" alt="icono de mastercard" class="size_img">
+                <img src="../img/visa.png" alt="icono de visa" class="size_img">
+            </div>
+            <div class="redes">
+                <img src="../img/whatsapp.png" alt="icono de whatsapp" class="size_img">
+                <img src="../img/instagram.png" alt="icono de instagram" class="size_img">
+                <img src="../img/tiktok.png" alt="icono de tiktok" class="size_img">
+                <img src="../img/facebook.png" alt="icono de facebook" class="size_img">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
