--- a/src/carta.html
+++ b/src/carta.html
@@ -10,13 +10,13 @@
     <title>Nuestra Carta</title>
 </head>
 <body>
-    <table>
-        <td><img src="../img/carta1.jpeg" alt="plato carta 1" class="card"></td>
-        <td><img src="../img/carta2.jpeg" alt="plato carta 2" class="card"></td>
-        <td><img src="../img/carta3.jpeg" alt="plato carta 3" class="card"></td>
-        <td><img src="../img/carta4.jpeg" alt="plato carta 4" class="card"></td>
-        <td><img src="../img/carta5.jpegs" alt="plato carta 5" class="card"></td>
-    </table>
+    <center><h1>Nuestra Carta</h1></center> 
+    <div class="container">
+        <img src="../img/carta1.jpeg" alt="plato carta 1" class="card">
+        <img src="../img/carta2.jpeg" alt="plato carta 2" class="card">
+        <img src="../img/carta3.jpeg" alt="plato carta 3" class="card">
+        <img src="../img/carta4.jpeg" alt="plato carta 4" class="card">
+        <img src="../img/carta5.jpeg" alt="plato carta 5" class="card">
+    </div>
 </body>
 </html>
-
