Se añadio la vista nuestra carta

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="content">
             <div class="full_screen">
                 <div class="label_container">
-                    <input href="./src/carta.html" class="styled-button "type="button" value="  Nuestra Carta   ">
-                    <input href="./src/reserva.html" class="styled-button"type="button" value="   Reserva Aqui    ">
-                    <input href="./src/delivery.html" class="styled-button"type="button" value="    Delivery    ">
+                    <input id="cartaButton" class="styled-button "type="button" value="  Nuestra Carta   ">
+                    <input id="reservaButton" class="styled-button"type="button" value="   Reserva Aqui    ">
+                    <input id="deliveryButton" class="styled-button"type="button" value="    Delivery    ">
                 </div>
                 <img src="./img/portada.jpg" alt="Plato de portada" />
             </div>
