--- a/src/aboutus.html
+++ b/src/aboutus.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bandera</title>
+    <title>Sobre Nosotros</title>
     <link rel="stylesheet" href="../css/aboutus_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <table class="flag">
-        <td class="izquierda">
-            <img src="../img/Tallarines_Rojos.png" alt="">
-        </td>
-
-        <td class="centro">
-            <p>"Sabor Peruano" es un restaurante que ofrece una fusión única entre la cocina peruana y las pastas italianas. Con platos como tallarines con ají de gallina y ravioles de lomo saltado, combina sabores auténticos con creatividad culinaria. Es el lugar perfecto para una experiencia gastronómica sorprendente y deliciosa.</p>
-        </td>
-
-        <td class="derecha">
-            <img src="../img/plato3.jpg" alt="">
-        </td>
-    <table/>
+    <div class="flag">
+        <div>
+            <div class="izquierda"></div>
+        </div>
+        <div class="color_centro">
+            <div class="centro">
+                <p>"Sabor Peruano" es un restaurante que ofrece una fusión única entre la cocina peruana y las pastas italianas. Con platos como tallarines con ají de gallina y ravioles de lomo saltado, combina sabores auténticos con creatividad culinaria. Es el lugar perfecto para una experiencia gastronómica sorprendente y deliciosa.</p>
+            </div>
+        </div>
+        <div>
+            <img class="derecha"></div>
+        </div>
+    </div>
+    <div/>
 </body>
 </html>
