Depuracion de estilos

--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
 </head>
 <section>
     <div class="containerindex">
-        <nav class="nav_content">
-            <div class="alineacion">
-                <a href="#aboutus">
-                    <img class="size_logo" src="./img/logo.png" alt="logo de pagina">
-                </a>
-            </div>
-            <div class="alineacion">
-                <div class="labelpad">
-                    <img class="containersvg" src="./img/telefono.png" alt="icono de telefono" />
-                    <label class="labelpad">786402</label>
+        <header>
+            <nav class="nav_content">
+                <div class="alineacion">
+                    <a href="#aboutus">
+                        <img class="size_logo" src="./img/logo.png" alt="logo de pagina">
+                    </a>
                 </div>
-                <div class="labelpad">
-                    <img class="containersvg" src="./img/person.svg" alt="icono de persona">
-                    <label class="labelpad">Ingresa o Crea una Cuenta</label>
+                <div class="alineacion">
+                    <div class="labelpad">
+                        <img class="containersvg" src="./img/telefono.png" alt="icono de telefono" />
+                        <label class="labelpad">786402</label>
+                    </div>
+                    <div class="labelpad">
+                        <img class="containersvg" src="./img/person.svg" alt="icono de persona">
+                        <label class="labelpad">Ingresa o Crea una Cuenta</label>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </header>
         <div class="content">
             <div class="full_screen">
                 <div class="label_container">
