se añadio correcion de estilos y mejora de semantica

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet" />
 </head>
-<section>
+<section class="sectionindex">
     <div class="containerindex">
         <header>
             <nav class="nav_content">
@@ -47,7 +47,7 @@
         </div>
     </div>
 </section>
-<section id="aboutus">
+<section id="sectionaboutus">
     <div class="flagaboutus">
         <div>
             <div class="izquierdaaboutus"></div>
@@ -62,7 +62,7 @@
         </div>
     </div>
 </section>
-<section id="carta">
+<section id="sectionCarta">
     <center><h1>Nuestra Carta</h1></center>
     <div class="containercarta">
       <img src="../img/carta1.jpeg" alt="plato carta 1" class="card" />
