correcion de estilo

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
     </div>
 </section>
-<section id="reserva">
+<section id="sectionReserva">
     <div class="flag">
         <div class="izquierdareserva"></div>
         <div class="derechareserva"></div>
@@ -122,7 +122,7 @@
         </div>
     </div>
 </section>
-<section id="delivery">
+<section id="sectionDelivery">
     <div class="containerdelivery">
         <div class="izquierdadelivery">
             <img src="../img/plato_de_pasta.png" alt="">
