se corrigio nombre de etiquetas para la navegacion

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <nav class="nav_content">
                 <div class="alineacion">
-                    <a href="#aboutus">
+                    <a href="#sectionAboutus">
                         <img class="size_logo" src="./img/logo.png" alt="logo de pagina">
                     </a>
                 </div>
@@ -33,13 +33,13 @@
         <div class="content">
             <div class="full_screen">
                 <div class="label_container">
-                    <a href="#carta">
+                    <a href="#sectionCarta">
                         <input class="styled-button" type="button" value="  Nuestra Carta   ">
                     </a>
-                    <a href="#reserva">
+                    <a href="#sectionReserva">
                         <input class="styled-button" type="button" value="   Reserva Aqui    ">
                     </a>
-                    <a href="#delivery">
+                    <a href="#sectionDelivery">
                         <input class="styled-button" type="button" value="    Delivery    ">
                     </a>
                 </div>
@@ -47,7 +47,7 @@
         </div>
     </div>
 </section>
-<section id="sectionaboutus">
+<section id="sectionAboutus">
     <div class="flagaboutus">
         <div>
             <div class="izquierdaaboutus"></div>
