Se realizo depuracion de codigo

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <div class="full_screen">
                 <div class="label_container row"><!-- row:boostrap botones responsivos-->
                     <a href="#sectionCarta">
-                        <input class="styled-button btn" type="button" value="  Nuestra Carta   ">
+                        <input class="styled-button btn" type="button" value="  Nuestra Carta  ">
                     </a>
                     <a href="#sectionReserva">
-                        <input class="styled-button btn" type="button" value="   Reserva Aqui    ">
+                        <input class="styled-button btn" type="button" value="   Reserva Aqui   ">
                     </a>
                     <a href="#sectionDelivery">
                         <input class="styled-button btn" type="button" value="    Delivery    ">
@@ -49,16 +49,16 @@
     </div>
 </section>
 <section id="sectionAboutus">
-    <div class="flagaboutus">
-        <div>
+    <div class="flagaboutus row">
+        <div class="col">
             <div class="izquierdaaboutus"></div>
         </div>
-        <div class="color_centro">
-            <div class="centroaboutus">
+        <div class="color_centro col">
+            <div class="centroaboutus text-wrap">
                 <p>"Sabor Peruano" es un restaurante que ofrece una fusión única entre la cocina peruana y las pastas italianas. Con platos como tallarines con ají de gallina y ravioles de lomo saltado, combina sabores auténticos con creatividad culinaria. Es el lugar perfecto para una experiencia gastronómica sorprendente y deliciosa.</p>
             </div>
         </div>
-        <div>
+        <div class="col">
             <img class="derechaaboutus"></div>
     </div>
 </section>
