Proyecto funcional a espera de mejoras visuales

--- a/index.html
+++ b/index.html
@@ -48,19 +48,12 @@
         </div>
     </div>
 </section>
-<section id="sectionAboutus">
-    <div class="flagaboutus row">
-        <div class="col">
-            <div class="izquierdaaboutus"></div>
-        </div>
-        <div class="color_centro col">
-            <div class="centroaboutus text-wrap">
-                <p>"Sabor Peruano" es un restaurante que ofrece una fusión única entre la cocina peruana y las pastas italianas. Con platos como tallarines con ají de gallina y ravioles de lomo saltado, combina sabores auténticos con creatividad culinaria. Es el lugar perfecto para una experiencia gastronómica sorprendente y deliciosa.</p>
-            </div>
-        </div>
-        <div class="col">
-            <img class="derechaaboutus"></div>
+<section id="sectionaboutus">
+    <div class="contenedorSecundario" id="izquierdaAboutUs"></div>
+    <div class="contenedorSecundario" id="centroAboutUs">
+        <p>"Sabor Peruano" es un restaurante que ofrece una fusión única entre la cocina peruana y las pastas italianas. Con platos como tallarines con ají de gallina y ravioles de lomo saltado, combina sabores auténticos con creatividad culinaria. Es el lugar perfecto para una experiencia gastronómica sorprendente y deliciosa.</p>
     </div>
+    <div class="contenedorSecundario" id="derechaAboutUs"></div>
 </section>
 <section id="sectionCarta row"><!-- row:boostrap pagina responsivas pero se vuelve mas pequeña-->
     <center><h1>Nuestra Carta</h1></center>
