se corrigio el estilo responsivo de aboutus

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <section id="sectionaboutus">
     <div class="contenedorSecundario" id="izquierdaAboutUs"></div>
     <div class="contenedorSecundario" id="centroAboutUs">
-        <p>"Sabor Peruano" es un restaurante que ofrece una fusión única entre la cocina peruana y las pastas italianas. Con platos como tallarines con ají de gallina y ravioles de lomo saltado, combina sabores auténticos con creatividad culinaria. Es el lugar perfecto para una experiencia gastronómica sorprendente y deliciosa.</p>
+        <span>"Sabor Peruano" es un restaurante que ofrece una fusión única entre la cocina peruana y las pastas italianas. Con platos como tallarines con ají de gallina y ravioles de lomo saltado, combina sabores auténticos con creatividad culinaria. Es el lugar perfecto para una experiencia gastronómica sorprendente y deliciosa.</span>
     </div>
     <div class="contenedorSecundario" id="derechaAboutUs"></div>
 </section>
