se optimizo la carta en html y responsivamente

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav class="nav_content">
                 <div class="alineacion">
-                    <a href="#sectionAboutus">
+                    <a href="#sectionaboutus">
                         <img class="size_logo" src="./img/logo.png" alt="logo de pagina">
                     </a>
                 </div>
@@ -55,52 +55,31 @@
     </div>
     <div class="contenedorSecundario" id="derechaAboutUs"></div>
 </section>
-<section id="sectionCarta row"><!-- row:boostrap pagina responsivas pero se vuelve mas pequeña-->
-    <center><h1>Nuestra Carta</h1></center>
-    <div class="containercarta row">
-      <img src="../img/carta1.jpeg" alt="plato carta 1" class="card img-fluid" />
-      <img src="../img/carta2.jpeg" alt="plato carta 2" class="card img-fluid" />
-      <img src="../img/carta3.jpeg" alt="plato carta 3" class="card img-fluid" />
-      <img src="../img/carta4.jpeg" alt="plato carta 4" class="card img-fluid" />
-      <img src="../img/carta5.jpeg" alt="plato carta 5" class="card img-fluid" />
-    </div>
-    <div class="contenedor_platos">
-      <div class="platos_left">
-        <div class="align_platos">
-          <div class="izquierda">
-            <h2>Platos</h2>
-            <p>Pasta de verduras</p>
-            <p>Espaguetti sisco</p>
-            <p>Fettuccione Alfredo</p>
-          </div>
-          <div class="derecha">
-            <h2>Precios</h2>
-            <p>25</p>
-            <p>35</p>
-            <p>30</p>
-          </div>
+<section id="sectionCarta">
+    <h1>Nuestra Carta</h1>
+        <div class="containercarta">
+          <img src="../img/carta1.jpeg" alt="plato carta 1" class="card img-fluid" />
+          <img src="../img/carta2.jpeg" alt="plato carta 2" class="card img-fluid" />
+          <img src="../img/carta3.jpeg" alt="plato carta 3" class="card img-fluid" />
+          <img src="../img/carta4.jpeg" alt="plato carta 4" class="card img-fluid" />
+          <img src="../img/carta5.jpeg" alt="plato carta 5" class="card img-fluid" />
         </div>
-      </div>
-
-      <div class="platos_right">
-        <div class="align_platos">
-          <div class="izquierda">
-            <h2>Platos</h2>
-            <p>Presliana especial</p>
-            <p>Tallarines rojos</p>
-            <p>Tallarines saltados</p>
-          </div>
-          <div class="derecha">
-            <h2>Precios</h2>
-            <p>25</p>
-            <p>35</p>
-            <p>30</p>
-          </div>
+        <div class="contenedor_platos">
+            <div class="platoizquierda">
+                <h2>     Platos        Precios</h2>
+                <p>Pasta de verduras     25</p>
+                <p>Espaguetti sisco      35</p>
+                <p>Fettuccione Alfredo   30</p>
+            </div>
+            <div class="platoderecha">
+                <h2>     Platos         Precios</h2>
+                <p>Presliana especial     25</p>
+                <p>Tallarines rojos       35</p>
+                <p>Tallarines saltados    30</p>
+            </div>
         </div>
-      </div>
-    </div>
 </section>
-<section id="sectionReserva row">
+<section id="sectionReserva">
     <div class="flag">
         <div class="izquierdareserva"></div>
         <div class="derechareserva"></div>
